// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMarkers candle with volume events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "rgba(115, 191, 105, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 298,
            "width": 45,
            "x": 78,
            "y": 52,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 72,
            "width": 45,
            "x": 303,
            "y": 278,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 103,
            "width": 45,
            "x": 378,
            "y": 247,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(242, 73, 92, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 166,
            "width": 45,
            "x": 153,
            "y": 184,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 287,
            "width": 45,
            "x": 228,
            "y": 63,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 45,
            "x": 453,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 180,
            "width": 45,
            "x": 528,
            "y": 170,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 291,
            "width": 45,
            "x": 603,
            "y": 59,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 27,
            "width": 45,
            "x": 678,
            "y": 323,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 131,
            "width": 45,
            "x": 753,
            "y": 219,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(136, 136, 136, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 99,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 78,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 324,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 303,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 399,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 378,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 174,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 153,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 249,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 228,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 474,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 453,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 549,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 528,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 624,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 603,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 699,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 678,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 774,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 45,
            "x": 753,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 99,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 78,
            "y": 157,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 100,
            "y": 70,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 324,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 303,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 325,
            "y": 142,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 399,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 378,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 400,
            "y": 171,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 174,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 153,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 175,
            "y": 152,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 249,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 228,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 250,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 474,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 453,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 475,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 549,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 528,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 550,
            "y": 215,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 624,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 603,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 625,
            "y": 229,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 699,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 678,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 700,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 753,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 22,
            "x": 775,
            "y": 287,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 324,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 34,
            "width": 45,
            "x": 303,
            "y": 142,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 174,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 45,
            "x": 153,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 249,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 120,
            "width": 45,
            "x": 228,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 399,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 5,
            "width": 45,
            "x": 378,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 474,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 20,
            "width": 45,
            "x": 453,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 549,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 44,
            "width": 45,
            "x": 528,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 624,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 24,
            "width": 45,
            "x": 603,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 699,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 39,
            "width": 45,
            "x": 678,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 43,
            "width": 45,
            "x": 753,
            "y": 244,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 99,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 87,
            "width": 45,
            "x": 78,
            "y": 70,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 83,
            "width": 41,
            "x": 80,
            "y": 72,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 30,
            "width": 41,
            "x": 305,
            "y": 144,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 380,
            "y": 173,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 99,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 87,
            "width": 45,
            "x": 78,
            "y": 70,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 324,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 34,
            "width": 45,
            "x": 303,
            "y": 142,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 399,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 5,
            "width": 45,
            "x": 378,
            "y": 171,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 174,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 45,
            "x": 153,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 249,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 120,
            "width": 45,
            "x": 228,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 474,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 20,
            "width": 45,
            "x": 453,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 549,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 44,
            "width": 45,
            "x": 528,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 624,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 24,
            "width": 45,
            "x": 603,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 699,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 39,
            "width": 45,
            "x": 678,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 43,
            "width": 45,
            "x": 753,
            "y": 244,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;
